--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "pandas (>=2.3.1,<3.0.0)",
+    "requests (>=2.32.4,<3.0.0)"
 ]
 
 
@@ -28,7 +30,17 @@ pytest = "^8.4.1"
 
 [tool.black]
 line-length = 119
-exclude = '(/\.git/)'
+exclude = '''
+/(
+    \.venv
+  | venv
+  | \.git
+  | \.mypy_cache
+  | \.pytest_cache
+  | build
+  | dist
+)/
+'''
 
 [tool.isort]
 line_length = 119
