--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ isort = "^6.0.1"
 [tool.poetry.group.dev.dependencies]
 pytest-cov = "^6.2.1"
 pytest = "^8.4.1"
+openpyxl = "^3.1.5"
 
 [tool.black]
 line-length = 119
